[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/slidePuzzle/slidePuzzleTileMap.gd" type="Script" id=1]
[ext_resource path="res://assets/SlidePuzzleTileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/bluePiece.png" type="Texture" id=3]
[ext_resource path="res://assets/blueGoal.png" type="Texture" id=4]
[ext_resource path="res://SlidePuzzleDemo.gd" type="Script" id=5]
[ext_resource path="res://assets/PixelOperator8.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/nextSlide.png" type="Texture" id=7]
[ext_resource path="res://assets/previousSlide.png" type="Texture" id=8]
[ext_resource path="res://Background.gd" type="Script" id=9]
[ext_resource path="res://assets/redPiece.png" type="Texture" id=10]
[ext_resource path="res://assets/redGoal.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
resource_name = "Solved"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 5.1, -0.25, 0, 0.25, 0, -5.1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.121569, 0.121569, 0.121569, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
font_data = ExtResource( 6 )

[node name="SlidePuzzleDemo" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="nextSlide" type="TextureButton" parent="CanvasLayer"]
margin_left = 976.393
margin_top = 559.285
margin_right = 1008.39
margin_bottom = 591.285
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="previousSlide" type="TextureButton" parent="CanvasLayer"]
margin_left = 15.4756
margin_top = 559.285
margin_right = 47.4756
margin_bottom = 591.285
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
centered = false
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="Background"]
anchor_mode = 0
current = true
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Tween" type="Tween" parent="Background"]

[node name="Slide1" type="Node" parent="."]

[node name="FirstExample" type="TileMap" parent="Slide1"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0 )
script = ExtResource( 1 )
puzzle_name = "First"

[node name="Pieces" type="Node" parent="Slide1/FirstExample"]

[node name="Blue" type="Node" parent="Slide1/FirstExample/Pieces"]

[node name="Pieces" type="Node" parent="Slide1/FirstExample/Pieces/Blue"]

[node name="BluePiece1" type="Sprite" parent="Slide1/FirstExample/Pieces/Blue/Pieces"]
position = Vector2( 64, 512 )
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="Goals" type="Node" parent="Slide1/FirstExample/Pieces/Blue"]

[node name="BlueGoal" type="Sprite" parent="Slide1/FirstExample/Pieces/Blue/Goals"]
position = Vector2( 896, 512 )
texture = ExtResource( 4 )
centered = false

[node name="PuzzleSolved" type="Label" parent="Slide1"]
visible = false
margin_left = 128.0
margin_top = 448.0
margin_right = 896.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 384, 32 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Puzzle Solved"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="AnimationPlayer" parent="Slide1/PuzzleSolved"]
anims/Solved = SubResource( 5 )

[node name="Slide1Text" type="RichTextLabel" parent="Slide1"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 448.0
custom_fonts/normal_font = SubResource( 3 )
text = "   First copy the addon folder inside your Godot project
Then to activate the plugin open \"Project Settings>Plugins\" and change from \"Inactive\" to \"Active\" on the slidePuzzle entry
Go to your 2d scene and \"add child node>Slide Puzzle\" (it should be below TileMap)
Configure \"Slide puzzle\" to have a cell size equals to you pieces size
Configure you scene to snap elements to your cell size
Add a child node Node and name it Pieces.
For each piece type add a child node.
So for example if you have a red piece and a blue piece you would add a Node Blue and a node Red.
Inside each piece node you also need two nodes Pieces and Goals
On Pieces add the sprites for the pieces. They should have the cell size of SlidePuzzle and should be aligned with the grid.
Don't forget to uncheck centered inside \"Offset>Centered\".
On Goals add the sprites for the goals. Also should have the same cell size and be aligned.
After that draw some cells, put the piece sprite and the goal sprite somewhere over the cell path."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragThis" type="Label" parent="Slide1"]
margin_left = 128.0
margin_top = 512.0
margin_right = 635.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.8, 0.8, 0.8, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Drag this to your right --->"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slide2" type="Node" parent="."]

[node name="SlidePuzzle" type="TileMap" parent="Slide2"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 393236, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0 )
script = ExtResource( 1 )
puzzle_name = "Second"

[node name="Pieces" type="Node" parent="Slide2/SlidePuzzle"]

[node name="Blue" type="Node" parent="Slide2/SlidePuzzle/Pieces"]

[node name="Pieces" type="Node" parent="Slide2/SlidePuzzle/Pieces/Blue"]

[node name="BluePiece1" type="Sprite" parent="Slide2/SlidePuzzle/Pieces/Blue/Pieces"]
position = Vector2( 1152, 448 )
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="Goals" type="Node" parent="Slide2/SlidePuzzle/Pieces/Blue"]

[node name="BlueGoal" type="Sprite" parent="Slide2/SlidePuzzle/Pieces/Blue/Goals"]
position = Vector2( 1472, 448 )
texture = ExtResource( 4 )
centered = false

[node name="Red" type="Node" parent="Slide2/SlidePuzzle/Pieces"]

[node name="Pieces" type="Node" parent="Slide2/SlidePuzzle/Pieces/Red"]

[node name="RedPiece" type="Sprite" parent="Slide2/SlidePuzzle/Pieces/Red/Pieces"]
position = Vector2( 1088, 448 )
z_index = 1
texture = ExtResource( 10 )
centered = false

[node name="Goals" type="Node" parent="Slide2/SlidePuzzle/Pieces/Red"]

[node name="RedGoal" type="Sprite" parent="Slide2/SlidePuzzle/Pieces/Red/Goals"]
position = Vector2( 1536, 448 )
texture = ExtResource( 11 )
centered = false
[connection signal="button_down" from="CanvasLayer/nextSlide" to="Background" method="_on_nextSlide_button_down"]
[connection signal="button_down" from="CanvasLayer/previousSlide" to="Background" method="_on_previousSlide_button_down"]
[connection signal="puzzle_solved" from="Slide1/FirstExample" to="." method="_on_FirstExample_puzzle_solved"]
